namespace SwemExample.Basket;

public abstract class BasketFactory
{
    public abstract IBasket Create();
}