using SwemSample.Items;

namespace SwemSample.Basket
{
	public class BasketItem
	{
		public int Count { get; set; }

		public Item Item { get; set; }
	}
}
