namespace SwemSample.Items
{
	public enum SportItemKind
	{
		X,
		Y,
		Z
	}
}
